--- a/source/editor/tsconfig.json
+++ b/source/editor/tsconfig.json
@@ -35,6 +35,9 @@
         },
         {
             "path": "./plugins/phasereditor2d.webContentTypes/src"
+        },
+        {
+            "path": "./plugins/cprewritten.net.demo/src"
         }
     ],
     "files": []
